feat(automations): add `update` endpoint
